Grupo14/y.output
Terminals unused in grammar

   "{"
   "}"


Rules useless in parser due to conflicts

   32 $@8: /* empty */


State 26 conflicts: 7 reduce/reduce
State 54 conflicts: 4 reduce/reduce


Grammar

    0 $accept: PROGRAMA $end

    1 PROGRAMA: bloque_declaraciones bloque

    2 bloque_declaraciones: "DECVAR" declaraciones "ENDDEC"

    3 declaraciones: declaracion
    4              | declaraciones declaracion

    5 $@1: /* empty */

    6 declaracion: lista_variables "." "INTEGER" $@1

    7 $@2: /* empty */

    8 declaracion: lista_variables "." "STRING" $@2

    9 $@3: /* empty */

   10 declaracion: lista_variables "." "FLOAT" $@3

   11 $@4: /* empty */

   12 lista_variables: "identificador" $@4

   13 $@5: /* empty */

   14 lista_variables: "identificador" $@5 "," lista_variables

   15 bloque: sentencia
   16       | bloque sentencia

   17 sentencia: asignacion
   18          | seleccion
   19          | iteracion
   20          | salida
   21          | entrada

   22 salida: "WRITE" "identificador"
   23       | "WRITE" "constante string"
   24       | "WRITE" "constante real"
   25       | "WRITE" "constante entera"

   26 entrada: "READ" "identificador"

   27 asignacion: "identificador" ":=" expresion
   28           | "identificador" ":=" "constante string"

   29 $@6: /* empty */

   30 $@7: /* empty */

   31 seleccion: "IF" "(" $@6 condicion ")" $@7 bloque "ENDIF"

   32 $@8: /* empty */

   33 $@9: /* empty */

   34 $@10: /* empty */

   35 seleccion: "IF" "(" $@8 condicion ")" $@9 bloque $@10 "ELSE" bloque "ENDIF"

   36 $@11: /* empty */

   37 $@12: /* empty */

   38 iteracion: "WHILE" "(" $@11 condicion ")" $@12 bloque "ENDWHILE"

   39 condicion: condicion "OR" termino_logico
   40          | "NOT" termino_logico
   41          | termino_logico

   42 termino_logico: comparacion
   43               | termino_logico "AND" comparacion

   44 $@13: /* empty */

   45 comparacion: expresion $@13 "==" expresion

   46 $@14: /* empty */

   47 comparacion: expresion $@14 "<=" expresion

   48 $@15: /* empty */

   49 comparacion: expresion $@15 ">=" expresion

   50 $@16: /* empty */

   51 comparacion: expresion $@16 ">" expresion

   52 $@17: /* empty */

   53 comparacion: expresion $@17 "<" expresion

   54 $@18: /* empty */

   55 comparacion: expresion $@18 "!=" expresion
   56            | between
   57            | inlist

   58 $@19: /* empty */

   59 comparacion: "(" $@19 condicion ")"

   60 expresion: expresion "+" termino
   61          | expresion "-" termino
   62          | termino

   63 termino: termino "*" factor
   64        | termino "/" factor
   65        | factor

   66 factor: "identificador"
   67       | "constante entera"
   68       | "constante real"

   69 $@20: /* empty */

   70 factor: "(" $@20 expresion ")"

   71 $@21: /* empty */

   72 $@22: /* empty */

   73 $@23: /* empty */

   74 between: "BETWEEN" "(" "identificador" $@21 "," "[" expresion $@22 ";" expresion $@23 "]" ")"

   75 inlist: "INLIST" "(" "identificador" "," "[" lista_expresiones "]" ")"

   76 lista_expresiones: lista_expresiones ";" expresion
   77                  | expresion


Terminals, with rules where they appear

$end (0) 0
error (256)
"DECVAR" (258) 2
"ENDDEC" (259) 2
"INTEGER" (260) 6
"FLOAT" (261) 10
"STRING" (262) 8
"IF" (263) 31 35
"ELSE" (264) 35
"ENDIF" (265) 31 35
"WHILE" (266) 38
"ENDWHILE" (267) 38
";" (268) 74 76
"," (269) 14 74 75
"." (270) 6 8 10
":=" (271) 27 28
"+" (272) 60
"-" (273) 61
"*" (274) 63
"/" (275) 64
"(" (276) 31 35 38 59 70 74 75
")" (277) 31 35 38 59 70 74 75
"[" (278) 74 75
"]" (279) 74 75
"{" (280)
"}" (281)
"==" (282) 45
"!=" (283) 55
"<" (284) 53
"<=" (285) 47
">" (286) 51
">=" (287) 49
"AND" (288) 43
"OR" (289) 39
"NOT" (290) 40
"WRITE" (291) 22 23 24 25
"READ" (292) 26
"identificador" (293) 12 14 22 26 27 28 66 74 75
"constante entera" (294) 25 67
"constante real" (295) 24 68
"constante string" (296) 23 28
"BETWEEN" (297) 74
"INLIST" (298) 75


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
PROGRAMA (45)
    on left: 1, on right: 0
bloque_declaraciones (46)
    on left: 2, on right: 1
declaraciones (47)
    on left: 3 4, on right: 2 4
declaracion (48)
    on left: 6 8 10, on right: 3 4
$@1 (49)
    on left: 5, on right: 6
$@2 (50)
    on left: 7, on right: 8
$@3 (51)
    on left: 9, on right: 10
lista_variables (52)
    on left: 12 14, on right: 6 8 10 14
$@4 (53)
    on left: 11, on right: 12
$@5 (54)
    on left: 13, on right: 14
bloque (55)
    on left: 15 16, on right: 1 16 31 35 38
sentencia (56)
    on left: 17 18 19 20 21, on right: 15 16
salida (57)
    on left: 22 23 24 25, on right: 20
entrada (58)
    on left: 26, on right: 21
asignacion (59)
    on left: 27 28, on right: 17
seleccion (60)
    on left: 31 35, on right: 18
$@6 (61)
    on left: 29, on right: 31
$@7 (62)
    on left: 30, on right: 31
$@8 (63)
    on left: 32, on right: 35
$@9 (64)
    on left: 33, on right: 35
$@10 (65)
    on left: 34, on right: 35
iteracion (66)
    on left: 38, on right: 19
$@11 (67)
    on left: 36, on right: 38
$@12 (68)
    on left: 37, on right: 38
condicion (69)
    on left: 39 40 41, on right: 31 35 38 39 59
termino_logico (70)
    on left: 42 43, on right: 39 40 41 43
comparacion (71)
    on left: 45 47 49 51 53 55 56 57 59, on right: 42 43
$@13 (72)
    on left: 44, on right: 45
$@14 (73)
    on left: 46, on right: 47
$@15 (74)
    on left: 48, on right: 49
$@16 (75)
    on left: 50, on right: 51
$@17 (76)
    on left: 52, on right: 53
$@18 (77)
    on left: 54, on right: 55
$@19 (78)
    on left: 58, on right: 59
expresion (79)
    on left: 60 61 62, on right: 27 45 47 49 51 53 55 60 61 70 74 76
    77
termino (80)
    on left: 63 64 65, on right: 60 61 62 63 64
factor (81)
    on left: 66 67 68 70, on right: 63 64 65
$@20 (82)
    on left: 69, on right: 70
between (83)
    on left: 74, on right: 56
$@21 (84)
    on left: 71, on right: 74
$@22 (85)
    on left: 72, on right: 74
$@23 (86)
    on left: 73, on right: 74
inlist (87)
    on left: 75, on right: 57
lista_expresiones (88)
    on left: 76 77, on right: 75 76


state 0

    0 $accept: . PROGRAMA $end

    "DECVAR"  shift, and go to state 1

    PROGRAMA              go to state 2
    bloque_declaraciones  go to state 3


state 1

    2 bloque_declaraciones: "DECVAR" . declaraciones "ENDDEC"

    "identificador"  shift, and go to state 4

    declaraciones    go to state 5
    declaracion      go to state 6
    lista_variables  go to state 7


state 2

    0 $accept: PROGRAMA . $end

    $end  shift, and go to state 8


state 3

    1 PROGRAMA: bloque_declaraciones . bloque

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    bloque      go to state 14
    sentencia   go to state 15
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 4

   12 lista_variables: "identificador" . $@4
   14                | "identificador" . $@5 "," lista_variables

    ","       reduce using rule 13 ($@5)
    $default  reduce using rule 11 ($@4)

    $@4  go to state 21
    $@5  go to state 22


state 5

    2 bloque_declaraciones: "DECVAR" declaraciones . "ENDDEC"
    4 declaraciones: declaraciones . declaracion

    "ENDDEC"         shift, and go to state 23
    "identificador"  shift, and go to state 4

    declaracion      go to state 24
    lista_variables  go to state 7


state 6

    3 declaraciones: declaracion .

    $default  reduce using rule 3 (declaraciones)


state 7

    6 declaracion: lista_variables . "." "INTEGER" $@1
    8            | lista_variables . "." "STRING" $@2
   10            | lista_variables . "." "FLOAT" $@3

    "."  shift, and go to state 25


state 8

    0 $accept: PROGRAMA $end .

    $default  accept


state 9

   31 seleccion: "IF" . "(" $@6 condicion ")" $@7 bloque "ENDIF"
   35          | "IF" . "(" $@8 condicion ")" $@9 bloque $@10 "ELSE" bloque "ENDIF"

    "("  shift, and go to state 26


state 10

   38 iteracion: "WHILE" . "(" $@11 condicion ")" $@12 bloque "ENDWHILE"

    "("  shift, and go to state 27


state 11

   22 salida: "WRITE" . "identificador"
   23       | "WRITE" . "constante string"
   24       | "WRITE" . "constante real"
   25       | "WRITE" . "constante entera"

    "identificador"     shift, and go to state 28
    "constante entera"  shift, and go to state 29
    "constante real"    shift, and go to state 30
    "constante string"  shift, and go to state 31


state 12

   26 entrada: "READ" . "identificador"

    "identificador"  shift, and go to state 32


state 13

   27 asignacion: "identificador" . ":=" expresion
   28           | "identificador" . ":=" "constante string"

    ":="  shift, and go to state 33


state 14

    1 PROGRAMA: bloque_declaraciones bloque .
   16 bloque: bloque . sentencia

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    $default  reduce using rule 1 (PROGRAMA)

    sentencia   go to state 34
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 15

   15 bloque: sentencia .

    $default  reduce using rule 15 (bloque)


state 16

   20 sentencia: salida .

    $default  reduce using rule 20 (sentencia)


state 17

   21 sentencia: entrada .

    $default  reduce using rule 21 (sentencia)


state 18

   17 sentencia: asignacion .

    $default  reduce using rule 17 (sentencia)


state 19

   18 sentencia: seleccion .

    $default  reduce using rule 18 (sentencia)


state 20

   19 sentencia: iteracion .

    $default  reduce using rule 19 (sentencia)


state 21

   12 lista_variables: "identificador" $@4 .

    $default  reduce using rule 12 (lista_variables)


state 22

   14 lista_variables: "identificador" $@5 . "," lista_variables

    ","  shift, and go to state 35


state 23

    2 bloque_declaraciones: "DECVAR" declaraciones "ENDDEC" .

    $default  reduce using rule 2 (bloque_declaraciones)


state 24

    4 declaraciones: declaraciones declaracion .

    $default  reduce using rule 4 (declaraciones)


state 25

    6 declaracion: lista_variables "." . "INTEGER" $@1
    8            | lista_variables "." . "STRING" $@2
   10            | lista_variables "." . "FLOAT" $@3

    "INTEGER"  shift, and go to state 36
    "FLOAT"    shift, and go to state 37
    "STRING"   shift, and go to state 38


state 26

   31 seleccion: "IF" "(" . $@6 condicion ")" $@7 bloque "ENDIF"
   35          | "IF" "(" . $@8 condicion ")" $@9 bloque $@10 "ELSE" bloque "ENDIF"

    "("                 reduce using rule 29 ($@6)
    "("                 [reduce using rule 32 ($@8)]
    "NOT"               reduce using rule 29 ($@6)
    "NOT"               [reduce using rule 32 ($@8)]
    "identificador"     reduce using rule 29 ($@6)
    "identificador"     [reduce using rule 32 ($@8)]
    "constante entera"  reduce using rule 29 ($@6)
    "constante entera"  [reduce using rule 32 ($@8)]
    "constante real"    reduce using rule 29 ($@6)
    "constante real"    [reduce using rule 32 ($@8)]
    "BETWEEN"           reduce using rule 29 ($@6)
    "BETWEEN"           [reduce using rule 32 ($@8)]
    "INLIST"            reduce using rule 29 ($@6)
    "INLIST"            [reduce using rule 32 ($@8)]
    $default            reduce using rule 29 ($@6)

    $@6  go to state 39
    $@8  go to state 40


state 27

   38 iteracion: "WHILE" "(" . $@11 condicion ")" $@12 bloque "ENDWHILE"

    $default  reduce using rule 36 ($@11)

    $@11  go to state 41


state 28

   22 salida: "WRITE" "identificador" .

    $default  reduce using rule 22 (salida)


state 29

   25 salida: "WRITE" "constante entera" .

    $default  reduce using rule 25 (salida)


state 30

   24 salida: "WRITE" "constante real" .

    $default  reduce using rule 24 (salida)


state 31

   23 salida: "WRITE" "constante string" .

    $default  reduce using rule 23 (salida)


state 32

   26 entrada: "READ" "identificador" .

    $default  reduce using rule 26 (entrada)


state 33

   27 asignacion: "identificador" ":=" . expresion
   28           | "identificador" ":=" . "constante string"

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "constante string"  shift, and go to state 46

    expresion  go to state 47
    termino    go to state 48
    factor     go to state 49


state 34

   16 bloque: bloque sentencia .

    $default  reduce using rule 16 (bloque)


state 35

   14 lista_variables: "identificador" $@5 "," . lista_variables

    "identificador"  shift, and go to state 4

    lista_variables  go to state 50


state 36

    6 declaracion: lista_variables "." "INTEGER" . $@1

    $default  reduce using rule 5 ($@1)

    $@1  go to state 51


state 37

   10 declaracion: lista_variables "." "FLOAT" . $@3

    $default  reduce using rule 9 ($@3)

    $@3  go to state 52


state 38

    8 declaracion: lista_variables "." "STRING" . $@2

    $default  reduce using rule 7 ($@2)

    $@2  go to state 53


state 39

   31 seleccion: "IF" "(" $@6 . condicion ")" $@7 bloque "ENDIF"

    "("                 shift, and go to state 54
    "NOT"               shift, and go to state 55
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    condicion       go to state 58
    termino_logico  go to state 59
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 40

   35 seleccion: "IF" "(" $@8 . condicion ")" $@9 bloque $@10 "ELSE" bloque "ENDIF"

    "("                 shift, and go to state 54
    "NOT"               shift, and go to state 55
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    condicion       go to state 64
    termino_logico  go to state 59
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 41

   38 iteracion: "WHILE" "(" $@11 . condicion ")" $@12 bloque "ENDWHILE"

    "("                 shift, and go to state 54
    "NOT"               shift, and go to state 55
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    condicion       go to state 65
    termino_logico  go to state 59
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 42

   70 factor: "(" . $@20 expresion ")"

    $default  reduce using rule 69 ($@20)

    $@20  go to state 66


state 43

   66 factor: "identificador" .

    $default  reduce using rule 66 (factor)


state 44

   67 factor: "constante entera" .

    $default  reduce using rule 67 (factor)


state 45

   68 factor: "constante real" .

    $default  reduce using rule 68 (factor)


state 46

   28 asignacion: "identificador" ":=" "constante string" .

    $default  reduce using rule 28 (asignacion)


state 47

   27 asignacion: "identificador" ":=" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 27 (asignacion)


state 48

   62 expresion: termino .
   63 termino: termino . "*" factor
   64        | termino . "/" factor

    "*"  shift, and go to state 69
    "/"  shift, and go to state 70

    $default  reduce using rule 62 (expresion)


state 49

   65 termino: factor .

    $default  reduce using rule 65 (termino)


state 50

   14 lista_variables: "identificador" $@5 "," lista_variables .

    $default  reduce using rule 14 (lista_variables)


state 51

    6 declaracion: lista_variables "." "INTEGER" $@1 .

    $default  reduce using rule 6 (declaracion)


state 52

   10 declaracion: lista_variables "." "FLOAT" $@3 .

    $default  reduce using rule 10 (declaracion)


state 53

    8 declaracion: lista_variables "." "STRING" $@2 .

    $default  reduce using rule 8 (declaracion)


state 54

   59 comparacion: "(" . $@19 condicion ")"
   70 factor: "(" . $@20 expresion ")"

    "("                 reduce using rule 58 ($@19)
    "("                 [reduce using rule 69 ($@20)]
    "identificador"     reduce using rule 58 ($@19)
    "identificador"     [reduce using rule 69 ($@20)]
    "constante entera"  reduce using rule 58 ($@19)
    "constante entera"  [reduce using rule 69 ($@20)]
    "constante real"    reduce using rule 58 ($@19)
    "constante real"    [reduce using rule 69 ($@20)]
    $default            reduce using rule 58 ($@19)

    $@19  go to state 71
    $@20  go to state 66


state 55

   40 condicion: "NOT" . termino_logico

    "("                 shift, and go to state 54
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    termino_logico  go to state 72
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 56

   74 between: "BETWEEN" . "(" "identificador" $@21 "," "[" expresion $@22 ";" expresion $@23 "]" ")"

    "("  shift, and go to state 73


state 57

   75 inlist: "INLIST" . "(" "identificador" "," "[" lista_expresiones "]" ")"

    "("  shift, and go to state 74


state 58

   31 seleccion: "IF" "(" $@6 condicion . ")" $@7 bloque "ENDIF"
   39 condicion: condicion . "OR" termino_logico

    ")"   shift, and go to state 75
    "OR"  shift, and go to state 76


state 59

   41 condicion: termino_logico .
   43 termino_logico: termino_logico . "AND" comparacion

    "AND"  shift, and go to state 77

    $default  reduce using rule 41 (condicion)


state 60

   42 termino_logico: comparacion .

    $default  reduce using rule 42 (termino_logico)


state 61

   45 comparacion: expresion . $@13 "==" expresion
   47            | expresion . $@14 "<=" expresion
   49            | expresion . $@15 ">=" expresion
   51            | expresion . $@16 ">" expresion
   53            | expresion . $@17 "<" expresion
   55            | expresion . $@18 "!=" expresion
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    "!="      reduce using rule 54 ($@18)
    "<"       reduce using rule 52 ($@17)
    "<="      reduce using rule 46 ($@14)
    ">"       reduce using rule 50 ($@16)
    ">="      reduce using rule 48 ($@15)
    $default  reduce using rule 44 ($@13)

    $@13  go to state 78
    $@14  go to state 79
    $@15  go to state 80
    $@16  go to state 81
    $@17  go to state 82
    $@18  go to state 83


state 62

   56 comparacion: between .

    $default  reduce using rule 56 (comparacion)


state 63

   57 comparacion: inlist .

    $default  reduce using rule 57 (comparacion)


state 64

   35 seleccion: "IF" "(" $@8 condicion . ")" $@9 bloque $@10 "ELSE" bloque "ENDIF"
   39 condicion: condicion . "OR" termino_logico

    ")"   shift, and go to state 84
    "OR"  shift, and go to state 76


state 65

   38 iteracion: "WHILE" "(" $@11 condicion . ")" $@12 bloque "ENDWHILE"
   39 condicion: condicion . "OR" termino_logico

    ")"   shift, and go to state 85
    "OR"  shift, and go to state 76


state 66

   70 factor: "(" $@20 . expresion ")"

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 86
    termino    go to state 48
    factor     go to state 49


state 67

   60 expresion: expresion "+" . termino

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    termino  go to state 87
    factor   go to state 49


state 68

   61 expresion: expresion "-" . termino

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    termino  go to state 88
    factor   go to state 49


state 69

   63 termino: termino "*" . factor

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    factor  go to state 89


state 70

   64 termino: termino "/" . factor

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    factor  go to state 90


state 71

   59 comparacion: "(" $@19 . condicion ")"

    "("                 shift, and go to state 54
    "NOT"               shift, and go to state 55
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    condicion       go to state 91
    termino_logico  go to state 59
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 72

   40 condicion: "NOT" termino_logico .
   43 termino_logico: termino_logico . "AND" comparacion

    "AND"  shift, and go to state 77

    $default  reduce using rule 40 (condicion)


state 73

   74 between: "BETWEEN" "(" . "identificador" $@21 "," "[" expresion $@22 ";" expresion $@23 "]" ")"

    "identificador"  shift, and go to state 92


state 74

   75 inlist: "INLIST" "(" . "identificador" "," "[" lista_expresiones "]" ")"

    "identificador"  shift, and go to state 93


state 75

   31 seleccion: "IF" "(" $@6 condicion ")" . $@7 bloque "ENDIF"

    $default  reduce using rule 30 ($@7)

    $@7  go to state 94


state 76

   39 condicion: condicion "OR" . termino_logico

    "("                 shift, and go to state 54
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    termino_logico  go to state 95
    comparacion     go to state 60
    expresion       go to state 61
    termino         go to state 48
    factor          go to state 49
    between         go to state 62
    inlist          go to state 63


state 77

   43 termino_logico: termino_logico "AND" . comparacion

    "("                 shift, and go to state 54
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45
    "BETWEEN"           shift, and go to state 56
    "INLIST"            shift, and go to state 57

    comparacion  go to state 96
    expresion    go to state 61
    termino      go to state 48
    factor       go to state 49
    between      go to state 62
    inlist       go to state 63


state 78

   45 comparacion: expresion $@13 . "==" expresion

    "=="  shift, and go to state 97


state 79

   47 comparacion: expresion $@14 . "<=" expresion

    "<="  shift, and go to state 98


state 80

   49 comparacion: expresion $@15 . ">=" expresion

    ">="  shift, and go to state 99


state 81

   51 comparacion: expresion $@16 . ">" expresion

    ">"  shift, and go to state 100


state 82

   53 comparacion: expresion $@17 . "<" expresion

    "<"  shift, and go to state 101


state 83

   55 comparacion: expresion $@18 . "!=" expresion

    "!="  shift, and go to state 102


state 84

   35 seleccion: "IF" "(" $@8 condicion ")" . $@9 bloque $@10 "ELSE" bloque "ENDIF"

    $default  reduce using rule 33 ($@9)

    $@9  go to state 103


state 85

   38 iteracion: "WHILE" "(" $@11 condicion ")" . $@12 bloque "ENDWHILE"

    $default  reduce using rule 37 ($@12)

    $@12  go to state 104


state 86

   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino
   70 factor: "(" $@20 expresion . ")"

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68
    ")"  shift, and go to state 105


state 87

   60 expresion: expresion "+" termino .
   63 termino: termino . "*" factor
   64        | termino . "/" factor

    "*"  shift, and go to state 69
    "/"  shift, and go to state 70

    $default  reduce using rule 60 (expresion)


state 88

   61 expresion: expresion "-" termino .
   63 termino: termino . "*" factor
   64        | termino . "/" factor

    "*"  shift, and go to state 69
    "/"  shift, and go to state 70

    $default  reduce using rule 61 (expresion)


state 89

   63 termino: termino "*" factor .

    $default  reduce using rule 63 (termino)


state 90

   64 termino: termino "/" factor .

    $default  reduce using rule 64 (termino)


state 91

   39 condicion: condicion . "OR" termino_logico
   59 comparacion: "(" $@19 condicion . ")"

    ")"   shift, and go to state 106
    "OR"  shift, and go to state 76


state 92

   74 between: "BETWEEN" "(" "identificador" . $@21 "," "[" expresion $@22 ";" expresion $@23 "]" ")"

    $default  reduce using rule 71 ($@21)

    $@21  go to state 107


state 93

   75 inlist: "INLIST" "(" "identificador" . "," "[" lista_expresiones "]" ")"

    ","  shift, and go to state 108


state 94

   31 seleccion: "IF" "(" $@6 condicion ")" $@7 . bloque "ENDIF"

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    bloque      go to state 109
    sentencia   go to state 15
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 95

   39 condicion: condicion "OR" termino_logico .
   43 termino_logico: termino_logico . "AND" comparacion

    "AND"  shift, and go to state 77

    $default  reduce using rule 39 (condicion)


state 96

   43 termino_logico: termino_logico "AND" comparacion .

    $default  reduce using rule 43 (termino_logico)


state 97

   45 comparacion: expresion $@13 "==" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 110
    termino    go to state 48
    factor     go to state 49


state 98

   47 comparacion: expresion $@14 "<=" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 111
    termino    go to state 48
    factor     go to state 49


state 99

   49 comparacion: expresion $@15 ">=" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 112
    termino    go to state 48
    factor     go to state 49


state 100

   51 comparacion: expresion $@16 ">" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 113
    termino    go to state 48
    factor     go to state 49


state 101

   53 comparacion: expresion $@17 "<" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 114
    termino    go to state 48
    factor     go to state 49


state 102

   55 comparacion: expresion $@18 "!=" . expresion

    "("                 shift, and go to state 42
    "identificador"     shift, and go to state 43
    "constante entera"  shift, and go to state 44
    "constante real"    shift, and go to state 45

    expresion  go to state 115
    termino    go to state 48
    factor     go to state 49


state 103

   35 seleccion: "IF" "(" $@8 condicion ")" $@9 . bloque $@10 "ELSE" bloque "ENDIF"

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    bloque      go to state 116
    sentencia   go to state 15
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 104

   38 iteracion: "WHILE" "(" $@11 condicion ")" $@12 . bloque "ENDWHILE"

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    bloque      go to state 117
    sentencia   go to state 15
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 105

   70 factor: "(" $@20 expresion ")" .

    $default  reduce using rule 70 (factor)


state 106

   59 comparacion: "(" $@19 condicion ")" .

    $default  reduce using rule 59 (comparacion)


state 107

   74 between: "BETWEEN" "(" "identificador" $@21 . "," "[" expresion $@22 ";" expresion $@23 "]" ")"

    ","  shift, and go to state 118


state 108

   75 inlist: "INLIST" "(" "identificador" "," . "[" lista_expresiones "]" ")"

    "["  shift, and go to state 119


state 109

   16 bloque: bloque . sentencia
   31 seleccion: "IF" "(" $@6 condicion ")" $@7 bloque . "ENDIF"

    "IF"             shift, and go to state 9
    "ENDIF"          shift, and go to state 120
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    sentencia   go to state 34
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    iteracion   go to state 20


state 110

   45 comparacion: expresion $@13 "==" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 45 (comparacion)


state 111

   47 comparacion: expresion $@14 "<=" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 47 (comparacion)


state 112

   49 comparacion: expresion $@15 ">=" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 49 (comparacion)


state 113

   51 comparacion: expresion $@16 ">" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 51 (comparacion)


state 114

   53 comparacion: expresion $@17 "<" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 53 (comparacion)


state 115

   55 comparacion: expresion $@18 "!=" expresion .
   60 expresion: expresion . "+" termino
   61          | expresion . "-" termino

    "+"  shift, and go to state 67
    "-"  shift, and go to state 68

    $default  reduce using rule 55 (comparacion)


state 116

   16 bloque: bloque . sentencia
   35 seleccion: "IF" "(" $@8 condicion ")" $@9 bloque . $@10 "ELSE" bloque "ENDIF"

    "IF"             shift, and go to state 9
    "WHILE"          shift, and go to state 10
    "WRITE"          shift, and go to state 11
    "READ"           shift, and go to state 12
    "identificador"  shift, and go to state 13

    $default  reduce using rule 34 ($@10)

    sentencia   go to state 34
    salida      go to state 16
    entrada     go to state 17
    asignacion  go to state 18
    seleccion   go to state 19
    $@10        go to state 121
    iteracion   go to state 20


state 117

   16 bloque: bloque . sentencia
   38 iteracion: "WHILE" "(" $@11 condicion ")" $@12 bloque . "ENDWHILE"
